# HaoNLP

./: .gitignore  MANIFEST.in  README.md  gitmessage  pyproject.toml  setup.py
conf/: config.yaml
conf/dataset/: default.yaml
conf/dataset/text_classification/: default.yaml  imdb_sentiment_classification.yaml
conf/dataset/token_classification/: chest_ct_ner.yaml  default.yaml
conf/experiment/text_classification/: imdb_1.yaml
conf/experiment/token_classification/: chest_ct_1.yaml
conf/task/: default.yaml  text_classification.yaml  token_classification.yaml
conf/text_classification/: config.yaml
conf/trainer/: default.yaml
datasets/text_classification/imdb_sentiment_classification/: README.md  imdb_sentiment_classification.py
datasets/token_classification/chest_ct_ner/: README.md  chest_ct_ner.py
datasets/token_classification/chest_ct_ner/data/: validation.conll
datasets_hub/text_classification/imdb_sentiment_classification/: README.md
datasets_hub/text_classification/imdb_sentiment_classification/data/: test.csv  train.csv  validation.csv
datasets_hub/token_classification/chest_ct_ner/data/: test.conll  train.conll  validation.conll
src/haonlp/cli/: predict.py  test.py  train.py
src/haonlp/core/: __init__.py  data.py  model.py
src/haonlp/examples/: text_classification.py  token_classification.py
src/haonlp_conf/: config.yaml
src/haonlp_conf/task/: boundary_detection.yaml  text_classification.yaml  token_classification.yaml
src/winlp/cli/: predict.py  test.py  train.py
src/winlp/core/: data.py  model.py  utils.py
src/winlp_conf/task/: boundary_detection.yaml
tests/core/: test_data.py  test_model.py
tests/task/: test_text_classification.py  test_token_classification.py
winlp/cli/: predict.py  test.py  train.py
winlp/core/: __init__.py  data.py  model.py  types.py  utils.py
winlp/examples/: text_classification.py  token_classification.py
winlp/task/text_classification/: __init__.py  data.py  model.py
winlp/task/token_classification/: __init__.py  data.py  model.py
(+41 files in other folders)
