[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "winlp"
version = "0.0.1"
dependencies = [
    "hydra-core==1.3.2",
    "mlflow==2.8.1",
    "torch==2.1.1",
    "lightning==2.1.2",
    "datasets==2.15.0",
    "transformers==4.35.2",
    "onnx==1.15.0",
    "onnxruntime-gpu==1.16.3",
    "boto3==1.33.6",
]
requires-python = ">=3.10"
authors = [
    { name = "Bryant Lee", email = "bryant.lee@wingene.com.tw" },
    { name = "Ken Lin", email = "ken.lin@wingene.com.tw" },
]
maintainers = [
    { name = "Bryant Lee", email = "bryant.lee@wingene.com.tw" },
    { name = "Ken Lin", email = "ken.lin@wingene.com.tw" },
]
description = "MLOps package developed by Wingene."
readme = "README.md"

[project.urls]
Repository = "http://192.168.1.76:3000/bryant/MyMLOps.git"

[project.scripts]
winlp-train = "winlp.cli.train:main"
winlp-test = "winlp.cli.test:main"
winlp-predict = "winlp.cli.predict:main"

[tool.setuptools.packages.find]
where = ["src"]
